option('introspection',
       type: 'boolean', value: true,
       description: 'Generate GObject Introspection data (requires gobject-introspection)')

option('vapi',
       type: 'boolean', value: true,
       description: 'Generate vapi data for Vala (requires vapigen)')

option('plugins',
       type: 'boolean', value: true,
       description: 'Build core plugins')

option('documentation',
       type: 'boolean', value: false,
       description: 'Build API reference for plugins (requires gtk-doc)')

# This option exists for the developers, to speed up the install.
option('user-documentation',
       type: 'boolean', value: true,
       description: 'Build user documentation')

option('enable-gvfs-metadata',
       type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto',
       description: 'Enable using gvfs to store metadata')
