option('gtk_doc',
       type: 'boolean', value: false,
       description: 'Build API reference for plugins (requires gtk-doc)')

# This option exists for the developers, to speed up the install.
option('user_documentation',
       type: 'boolean', value: true,
       description: 'Build user documentation')
